# responsum

./: pyproject.toml
responsum/utils/: fits_file.py  time_interval.py
